<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        app:theme="@style/android:Theme.Material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_layout"
        android:fitsSystemWindows="true"
        android:elevation="@dimen/appBarLayout">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/appBarBackgroundColor">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/collapsing_poster_height"
                android:id="@+id/detail_poster_collapsing"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                app:theme="@style/android:Theme.Material"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/linear_layout_main_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_poster"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/linear_layout_left_padding"
                    android:paddingTop="@dimen/linear_layout_left_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/detail_release_date_c"
                        android:textSize="@dimen/release_date_text_size"
                        android:text="@string/detail_release_date"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_popularity"
                        android:textSize="@dimen/poplarity_size"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_pop_value"
                        android:id="@+id/detail_popularity_c"
                        android:textSize="@dimen/poplarity_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/detail_rating_c"
                        android:textSize="@dimen/detail_rate_count"
                        android:text="@string/detail_vote_average"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/detail_count_c"
                        android:textSize="@dimen/detail_rate_count"
                        android:text="@string/detail_vote_count" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_overview_c"
                android:paddingLeft="@dimen/overview_padding"
                android:paddingRight="@dimen/overview_padding"
                android:paddingBottom="@dimen/overview_padding"
                android:text="In 2016, one of the most successful animated franchises in the world returns with its biggest comedy adventure yet, KUNG FU PANDA 3. When Po's long-lost panda father suddenly reappears, the reunited duo travels to a secret panda paradise to meet scores of hilarious new panda characters. But when the supernatural villain Kai begins to sweep across China defeating all the kung fu masters, Po must do the impossible-learn to train a village full of his fun-loving, clumsy brethren to become the ultimate band of Kung Fu Pandas."
                android:textSize="@dimen/detail_overview_size"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movieTrailers"/>

            <FrameLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/movieReviews" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:fabSize="normal"

        app:layout_anchor="@+id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:backgroundTint="@color/statusBar" />
</android.support.design.widget.CoordinatorLayout>